--- a/app/src/main/res/layout/activity_report_edit.xml
+++ b/app/src/main/res/layout/activity_report_edit.xml
@@ -102,7 +102,6 @@
 			    <RelativeLayout
 			        android:layout_width="match_parent"
 			        android:layout_height="wrap_content"
-			        android:layout_marginTop="10dp"
 			        android:layout_marginBottom="10dp"
 			        android:layout_marginLeft="16dp"
 			        android:layout_marginRight="4dp" >
@@ -111,7 +110,7 @@
 				        android:id="@+id/timeTextView"
 				        android:layout_width="wrap_content"
 				        android:layout_height="wrap_content"
-				        android:layout_alignParentTop="true"
+                        android:layout_centerVertical="true"
 				        android:textColor="@color/hint_grey"
 				        android:textSize="14sp" />
 			
