--- a/app/src/main/res/layout/window_feedback_phone.xml
+++ b/app/src/main/res/layout/window_feedback_phone.xml
@@ -3,7 +3,7 @@
     android:id="@+id/baseLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/background_grey"
+    android:background="@drawable/window_background"
     android:orientation="vertical"
     android:layout_marginLeft="50dp"
     android:layout_marginRight="50dp"
@@ -55,10 +55,10 @@
         <Button
             android:id="@+id/submitButton"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="@dimen/window_button_height"
 			android:layout_toLeftOf="@+id/pivotView"
             android:layout_marginRight="5dp"
-            android:background="@drawable/button_dark_drawable"
+            android:background="@drawable/feedback_button_dark_drawable"
             android:text="@string/submit"
             android:textColor="@color/button_text_light_color" />
 
@@ -71,10 +71,10 @@
         <Button
             android:id="@+id/skipButton"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="@dimen/window_button_height"
 			android:layout_toRightOf="@+id/pivotView"
             android:layout_marginLeft="5dp"
-            android:background="@drawable/button_light_solid_drawable"
+            android:background="@drawable/feedback_button_light_drawable"
             android:text="@string/skip"
             android:textColor="@color/button_text_dark_color" />
 
