--- a/app/src/main/res/layout/list_report_detail.xml
+++ b/app/src/main/res/layout/list_report_detail.xml
@@ -46,7 +46,6 @@
 		<RelativeLayout
 		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="4dp" >
@@ -55,7 +54,7 @@
 			    android:id="@+id/timeTextView"
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
-			    android:layout_alignParentTop="true"
+                android:layout_centerVertical="true"
 			    android:textColor="@color/hint_grey"
 			    android:textSize="14sp" />
 			
