--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,9 +4,12 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <dimen name="window_corner_radius">8dp</dimen>
+    <dimen name="feedback_button_corner_radius">4dp</dimen>
     <dimen name="button_corner_radius">8dp</dimen>
     <dimen name="button_stroke_width">1dp</dimen>
     <dimen name="button_height">48dp</dimen>
+    <dimen name="window_button_height">32dp</dimen>
     <dimen name="radio_button_corner_radius">5dp</dimen>
     <dimen name="status_corner_radius">2dp</dimen>
     <dimen name="tag_corner_radius">5dp</dimen>
