--- a/app/src/main/res/layout/activity_me_edit_category.xml
+++ b/app/src/main/res/layout/activity_me_edit_category.xml
@@ -116,12 +116,13 @@
 		        android:layout_height="wrap_content"
 		        android:orientation="vertical"
 		        android:layout_margin="16dp" />
-		
+
+            <!--
 			<include
 			    android:layout_width="match_parent"
 			    android:layout_height="0.5dp"
 			    layout="@layout/view_divider" />
-		
+
 		    <LinearLayout
 		        android:layout_width="match_parent"
 		        android:layout_height="50dp"
@@ -137,7 +138,7 @@
 			        android:text="@string/category_limit"
 		            android:textColor="@color/font_major_dark"
 		            android:textSize="16sp" />
-		
+
 		        <EditText
 		            android:id="@+id/limitEditText"
 		            android:layout_width="0dp"
@@ -160,14 +161,14 @@
 			        android:text="@string/rmb"
 		            android:textColor="@color/hint_grey"
 		            android:textSize="14sp" />
-		        
+
 		    </LinearLayout>
-		
+
 			<include
 			    android:layout_width="match_parent"
 			    android:layout_height="0.5dp"
 			    layout="@layout/view_divider" />
-		
+
 		    <RelativeLayout
 		        android:layout_width="match_parent"
 		        android:layout_height="50dp"
@@ -182,7 +183,7 @@
 			        android:text="@string/prove_ahead"
 		            android:textColor="@color/font_major_dark"
 		            android:textSize="16sp" />
-	
+
 			    <ToggleButton
 			        android:id="@+id/proveAheadToggleButton"
 			        android:layout_width="49dp"
@@ -193,14 +194,14 @@
 			        android:background="@drawable/toggle_drawable"
 			        android:textOn=""
 			        android:textOff="" />
-		        
+
 		    </RelativeLayout>
-		
+
 			<include
 			    android:layout_width="match_parent"
 			    android:layout_height="0.5dp"
 			    android:layout_marginBottom="24dp"
-			    layout="@layout/view_divider" />
+			    layout="@layout/view_divider" /> -->
 		    
         </LinearLayout>
         
