--- a/app/src/main/res/layout/view_statistics.xml
+++ b/app/src/main/res/layout/view_statistics.xml
@@ -233,8 +233,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginTop="16dp"
-        android:orientation="vertical" >
-    </LinearLayout>
+        android:orientation="vertical" />
 
     <RelativeLayout
         android:layout_width="match_parent"
