modify ui and text

--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -24,10 +24,11 @@
         <TextView
             android:id="@+id/myTitleTextView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_centerVertical="true"
             android:layout_toLeftOf="@+id/pivotView"
             android:layout_marginRight="13dp"
+            android:gravity="center"
             android:text="@string/my_report"
             android:textColor="@color/major_light"
             android:textSize="20sp" />
@@ -36,8 +37,8 @@
             android:id="@+id/myShortTextView"
             android:layout_width="15dp"
             android:layout_height="15dp"
-            android:layout_alignTop="@+id/myTitleTextView"
             android:layout_alignRight="@+id/myTitleTextView"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="-10dp"
             android:background="@drawable/badge_short"
             android:gravity="center"
@@ -48,8 +49,8 @@
             android:id="@+id/myMediumTextView"
             android:layout_width="20dp"
             android:layout_height="15dp"
-            android:layout_alignTop="@+id/myTitleTextView"
             android:layout_alignRight="@+id/myTitleTextView"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="-15dp"
             android:background="@drawable/badge_medium"
             android:gravity="center"
@@ -60,8 +61,8 @@
             android:id="@+id/myLongTextView"
             android:layout_width="28dp"
             android:layout_height="15dp"
-            android:layout_alignTop="@+id/myTitleTextView"
             android:layout_alignRight="@+id/myTitleTextView"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="-23dp"
             android:background="@drawable/badge_long"
             android:gravity="center"
@@ -78,10 +79,11 @@
         <TextView
             android:id="@+id/othersTitleTextView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/pivotView"
             android:layout_marginLeft="13dp"
+            android:gravity="center"
             android:text="@string/others_report"
             android:textColor="@color/hint_white"
             android:textSize="20sp" />
@@ -90,8 +92,8 @@
             android:id="@+id/othersShortTextView"
             android:layout_width="15dp"
             android:layout_height="15dp"
-            android:layout_alignTop="@+id/othersTitleTextView"
             android:layout_alignRight="@+id/othersTitleTextView"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="-10dp"
             android:background="@drawable/badge_short"
             android:gravity="center"
@@ -102,8 +104,8 @@
             android:id="@+id/othersMediumTextView"
             android:layout_width="20dp"
             android:layout_height="15dp"
-            android:layout_alignTop="@+id/othersTitleTextView"
             android:layout_alignRight="@+id/othersTitleTextView"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="-15dp"
             android:background="@drawable/badge_medium"
             android:gravity="center"
@@ -114,8 +116,8 @@
             android:id="@+id/othersLongTextView"
             android:layout_width="28dp"
             android:layout_height="15dp"
-            android:layout_alignTop="@+id/othersTitleTextView"
             android:layout_alignRight="@+id/othersTitleTextView"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="-23dp"
             android:background="@drawable/badge_long"
             android:gravity="center"
