add search to choose member

--- a/app/src/main/res/layout/activity_me_about.xml
+++ b/app/src/main/res/layout/activity_me_about.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:id="@+id/containerLayout">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -54,7 +55,7 @@
 	        android:layout_height="wrap_content"
 	        android:layout_below="@+id/appNameTextView"
 	        android:layout_centerHorizontal="true"
-	        android:layout_marginTop="14dp"
+	        android:padding="14dp"
 	        android:text="@string/current_version" />
 
 	    <TextView
@@ -63,7 +64,7 @@
 	        android:layout_height="wrap_content"
 	        android:layout_below="@+id/currentVersionTextView"
 	        android:layout_centerHorizontal="true"
-	        android:layout_marginTop="24dp"
+	        android:layout_marginTop="14dp"
 	        android:text="@string/about_content"
 	        android:textSize="20sp" />
 
@@ -74,7 +75,7 @@
 	        android:layout_alignParentBottom="true"
 	        android:layout_alignParentLeft="true"
 	        android:text="@string/versionControl" />
-	
-	</RelativeLayout>
+
+    </RelativeLayout>
 
 </LinearLayout>
