--- a/app/src/main/res/layout/activity_reim_edit.xml
+++ b/app/src/main/res/layout/activity_reim_edit.xml
@@ -116,76 +116,28 @@
 				android:layout_width="match_parent"
 				android:layout_height="0.5dp"
 			  	layout="@layout/view_divider"/>
-	
-	        <RelativeLayout
-	            android:layout_width="match_parent"
-	            android:layout_height="56dp" >
 
-	            <TextView
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:layout_alignParentLeft="true"
-	                android:layout_marginTop="19dp"
-	                android:layout_marginLeft="16dp"
-	                android:text="@string/type"
-	                android:textColor="@color/hint_grey"
-	                android:textSize="14sp" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
 
-	            <LinearLayout
-	                android:id="@+id/typeLayout"
-	                android:layout_width="match_parent"
-	                android:layout_height="match_parent"
-	                android:layout_marginLeft="80dp"
-	                android:layout_marginRight="10dp"
-	                android:gravity="center_vertical" >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginTop="19dp"
+                    android:layout_marginLeft="16dp"
+                    android:text="@string/photo"
+                    android:textColor="@color/hint_grey"
+                    android:textSize="14sp" />
 
-		            <TextView
-		                android:id="@+id/typeTextView"
-		                android:layout_width="wrap_content"
-		                android:layout_height="wrap_content"
-		                android:layout_marginRight="10dp"
-		                android:textColor="@color/font_major_dark"
-		                android:textSize="18sp" />
-	
-		            <TextView
-		                android:id="@+id/approvedTextView"
-		                android:layout_width="wrap_content"
-		                android:layout_height="wrap_content"
-		                android:gravity="center"
-		                android:text="@string/status_prove_ahead_approved"
-		                android:textColor="@color/item_approved"
-		                android:textSize="18sp" />
-	            </LinearLayout>
-	
-	        </RelativeLayout>
-            
-		    <include                 
-				android:layout_width="match_parent"
-				android:layout_height="0.5dp"
-				android:layout_marginLeft="80dp"
-			  	layout="@layout/view_divider"/>
-	
-	        <RelativeLayout
-	            android:layout_width="match_parent"
-	            android:layout_height="wrap_content" >
-
-	            <TextView
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:layout_alignParentLeft="true"
-	                android:layout_marginTop="19dp"
-	                android:layout_marginLeft="16dp"
-	                android:text="@string/photo"
-	                android:textColor="@color/hint_grey"
-	                android:textSize="14sp" />
-
-	            <LinearLayout
-	                android:id="@+id/invoiceLayout"
-	                android:layout_width="match_parent"
-	                android:layout_height="wrap_content"
-	                android:orientation="vertical"
+                <LinearLayout
+                    android:id="@+id/invoiceLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
                     android:layout_toLeftOf="@+id/addInvoiceImageView"
-	                android:layout_marginLeft="80dp"
+                    android:layout_marginLeft="80dp"
                     android:paddingTop="3dp"
                     android:paddingBottom="13dp"
                     android:minHeight="56dp" />
@@ -201,8 +153,8 @@
                     android:paddingRight="8dp"
                     android:contentDescription="@string/add"
                     android:src="@drawable/add_tag_button" />
-	
-	        </RelativeLayout>
+
+            </RelativeLayout>
 
             <include
                 android:layout_width="match_parent"
@@ -252,12 +204,111 @@
                 </RelativeLayout>
 
             </RelativeLayout>
-            
-		    <include                 
-				android:layout_width="match_parent"
-				android:layout_height="0.5dp"
-				android:layout_marginLeft="80dp"
-			  	layout="@layout/view_divider"/>
+
+            <include
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_marginLeft="80dp"
+                layout="@layout/view_divider"/>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="56dp" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginTop="19dp"
+                    android:layout_marginLeft="16dp"
+                    android:text="@string/vendor"
+                    android:textColor="@color/hint_grey"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/vendorTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="80dp"
+                    android:layout_marginRight="16dp"
+                    android:gravity="center_vertical"
+                    android:textColor="@color/font_major_dark"
+                    android:textSize="18sp" />
+
+            </RelativeLayout>
+
+            <include
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_marginLeft="80dp"
+                layout="@layout/view_divider"/>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="56dp" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginTop="19dp"
+                    android:layout_marginLeft="16dp"
+                    android:text="@string/location"
+                    android:textColor="@color/hint_grey"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/locationTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="80dp"
+                    android:layout_marginRight="16dp"
+                    android:gravity="center_vertical"
+                    android:textColor="@color/font_major_dark"
+                    android:textSize="18sp" />
+
+            </RelativeLayout>
+
+            <include
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_marginLeft="80dp"
+                layout="@layout/view_divider"/>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="56dp" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginTop="19dp"
+                    android:layout_marginLeft="16dp"
+                    android:text="@string/time"
+                    android:textColor="@color/hint_grey"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/timeTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="80dp"
+                    android:layout_marginRight="16dp"
+                    android:gravity="center_vertical"
+                    android:textColor="@color/font_major_dark"
+                    android:textSize="18sp" />
+
+            </RelativeLayout>
+
+            <include
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_marginLeft="80dp"
+                layout="@layout/view_divider"/>
 	
 	        <RelativeLayout
 	            android:layout_width="match_parent"
@@ -269,129 +320,36 @@
 	                android:layout_alignParentLeft="true"
 	                android:layout_marginTop="19dp"
 	                android:layout_marginLeft="16dp"
-	                android:text="@string/time"
-	                android:textColor="@color/hint_grey"
-	                android:textSize="14sp" />
-
-	            <TextView
-	                android:id="@+id/timeTextView"
-	                android:layout_width="match_parent"
-	                android:layout_height="wrap_content"
-	                android:layout_centerVertical="true"
-	                android:layout_marginLeft="80dp"
-	                android:layout_marginRight="16dp"
-	                android:textColor="@color/font_major_dark"
-	                android:textSize="18sp" />
-	
-	        </RelativeLayout>
-            
-		    <include                 
-				android:layout_width="match_parent"
-				android:layout_height="0.5dp"
-				android:layout_marginLeft="80dp"
-			  	layout="@layout/view_divider"/>
-	
-	        <RelativeLayout
-	            android:layout_width="match_parent"
-	            android:layout_height="56dp" >
-
-	            <TextView
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:layout_alignParentLeft="true"
-	                android:layout_marginTop="19dp"
-	                android:layout_marginLeft="16dp"
-	                android:text="@string/vendor"
-	                android:textColor="@color/hint_grey"
-	                android:textSize="14sp" />
-
-	            <TextView
-	                android:id="@+id/vendorTextView"
-	                android:layout_width="match_parent"
-	                android:layout_height="wrap_content"
-	                android:layout_centerVertical="true"
-	                android:layout_marginLeft="80dp"
-	                android:layout_marginRight="16dp"
-	                android:textColor="@color/font_major_dark"
-	                android:textSize="18sp" />
-	
-	        </RelativeLayout>
-            
-		    <include                 
-				android:layout_width="match_parent"
-				android:layout_height="0.5dp"
-				android:layout_marginLeft="80dp"
-			  	layout="@layout/view_divider"/>
-	
-	        <RelativeLayout
-	            android:layout_width="match_parent"
-	            android:layout_height="56dp" >
-
-	            <TextView
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:layout_alignParentLeft="true"
-	                android:layout_marginTop="19dp"
-	                android:layout_marginLeft="16dp"
-	                android:text="@string/location"
-	                android:textColor="@color/hint_grey"
-	                android:textSize="14sp" />
-
-	            <TextView
-	                android:id="@+id/locationTextView"
-	                android:layout_width="match_parent"
-	                android:layout_height="wrap_content"
-	                android:layout_centerVertical="true"
-	                android:layout_marginLeft="80dp"
-	                android:layout_marginRight="16dp"
-	                android:textColor="@color/font_major_dark"
-	                android:textSize="18sp" />
-	
-	        </RelativeLayout>
-            
-		    <include                 
-				android:layout_width="match_parent"
-				android:layout_height="0.5dp"
-				android:layout_marginLeft="80dp"
-			  	layout="@layout/view_divider"/>
-	
-	        <RelativeLayout
-	            android:layout_width="match_parent"
-	            android:layout_height="wrap_content" >
-
-	            <TextView
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:layout_alignParentLeft="true"
-	                android:layout_marginTop="19dp"
-	                android:layout_marginLeft="16dp"
-	                android:text="@string/tag"
+	                android:text="@string/type"
 	                android:textColor="@color/hint_grey"
 	                android:textSize="14sp" />
 
 	            <LinearLayout
-	                android:id="@+id/tagLayout"
+	                android:id="@+id/typeLayout"
 	                android:layout_width="match_parent"
-	                android:layout_height="wrap_content"
-	            	android:minHeight="56dp"
-	            	android:orientation="vertical"
-	                android:layout_alignParentTop="true"
-	                android:layout_toLeftOf="@+id/addTagImageView"
-	                android:paddingBottom="17dp"
-	                android:layout_marginLeft="80dp" />
+	                android:layout_height="match_parent"
+	                android:layout_marginLeft="80dp"
+	                android:layout_marginRight="10dp"
+	                android:gravity="center_vertical" >
 
-	            <ImageView
-	                android:id="@+id/addTagImageView"
-                    android:layout_width="46dp"
-                    android:layout_height="56dp"
-                    android:layout_alignParentRight="true"
-                    android:paddingTop="13dp"
-                    android:paddingBottom="13dp"
-                    android:paddingLeft="8dp"
-                    android:paddingRight="8dp"
-	                android:contentDescription="@string/add"
-	                android:src="@drawable/add_tag_button" />
-	            
+		            <TextView
+		                android:id="@+id/typeTextView"
+		                android:layout_width="wrap_content"
+		                android:layout_height="wrap_content"
+		                android:layout_marginRight="10dp"
+		                android:textColor="@color/font_major_dark"
+		                android:textSize="18sp" />
+	
+		            <TextView
+		                android:id="@+id/approvedTextView"
+		                android:layout_width="wrap_content"
+		                android:layout_height="wrap_content"
+		                android:gravity="center"
+		                android:text="@string/status_prove_ahead_approved"
+		                android:textColor="@color/item_approved"
+		                android:textSize="18sp" />
+	            </LinearLayout>
+	
 	        </RelativeLayout>
             
 		    <include                 
@@ -399,6 +357,59 @@
 				android:layout_height="0.5dp"
 				android:layout_marginLeft="80dp"
 			  	layout="@layout/view_divider"/>
+
+            <LinearLayout
+                android:id="@+id/tagContainerLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" >
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" >
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:layout_marginTop="19dp"
+                        android:layout_marginLeft="16dp"
+                        android:text="@string/tag"
+                        android:textColor="@color/hint_grey"
+                        android:textSize="14sp" />
+
+                    <LinearLayout
+                        android:id="@+id/tagLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:minHeight="56dp"
+                        android:orientation="vertical"
+                        android:layout_alignParentTop="true"
+                        android:layout_toLeftOf="@+id/addTagImageView"
+                        android:paddingBottom="17dp"
+                        android:layout_marginLeft="80dp" />
+
+                    <ImageView
+                        android:id="@+id/addTagImageView"
+                        android:layout_width="46dp"
+                        android:layout_height="56dp"
+                        android:layout_alignParentRight="true"
+                        android:paddingTop="13dp"
+                        android:paddingBottom="13dp"
+                        android:paddingLeft="8dp"
+                        android:paddingRight="8dp"
+                        android:contentDescription="@string/add"
+                        android:src="@drawable/add_tag_button" />
+
+                </RelativeLayout>
+
+                <include
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:layout_marginLeft="80dp"
+                    layout="@layout/view_divider"/>
+
+            </LinearLayout>
 	
 	        <RelativeLayout
 	            android:layout_width="match_parent"
