--- a/app/src/main/res/layout/activity_reim_location.xml
+++ b/app/src/main/res/layout/activity_reim_location.xml
@@ -50,7 +50,7 @@
         <EditText
             android:id="@+id/locationEditText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_centerInParent="true"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
