--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -21,6 +21,18 @@
             android:textColor="@color/major_light"
             android:textSize="20sp" />
 
+        <TextView
+            android:id="@+id/signOutTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:gravity="center"
+            android:text="@string/sign_out"
+            android:textColor="@color/title_text_color"
+            android:textSize="16sp" />
+
     </RelativeLayout>
 
     <ScrollView
@@ -194,6 +206,54 @@
 				android:layout_width="match_parent"
 				android:layout_height="0.5dp"
 	        	layout="@layout/view_divider"/>
+
+            <RelativeLayout
+                android:id="@+id/defaultManagerLayout"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@drawable/me_item_drawable"
+                android:clickable="true" >
+
+                <TextView
+                    android:id="@+id/managerPrompt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="16dp"
+                    android:text="@string/default_manager"
+                    android:textColor="@color/font_major_dark"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/managerTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toLeftOf="@+id/managerNextImageView"
+                    android:layout_toRightOf="@+id/managerPrompt"
+                    android:gravity="right"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:textColor="@color/hint_grey"
+                    android:textSize="14sp" />
+
+                <ImageView
+                    android:id="@+id/managerNextImageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="10dp"
+                    android:contentDescription="@string/next"
+                    android:src="@drawable/next" />
+
+            </RelativeLayout>
+
+            <include
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                layout="@layout/view_divider"/>
 			
             <RelativeLayout
                 android:id="@+id/invoiceLayout"
@@ -218,40 +278,127 @@
 				android:layout_width="match_parent"
 				android:layout_height="0.5dp"
 	        	layout="@layout/view_divider"/>
-            
-	        <include                 
-				android:layout_width="match_parent"
-				android:layout_height="0.5dp"
-				android:layout_marginTop="24dp"
-	        	layout="@layout/view_divider"/>
-			
+
             <RelativeLayout
-                android:id="@+id/settingsLayout"
-				android:layout_width="match_parent"
-				android:layout_height="50dp"
-				android:clickable="true"
-				android:background="@drawable/me_item_drawable" >
-					     
-				<TextView
-				    android:layout_width="wrap_content"
-				    android:layout_height="wrap_content"
-				    android:layout_centerVertical="true"
-				    android:layout_alignParentLeft="true"
-				    android:layout_marginLeft="16dp"
-				    android:text="@string/settings"
+                android:id="@+id/categoryLayout"
+                android:layout_width="match_parent"
+                android:layout_height="51dp"
+                android:layout_marginTop="24dp"
+                android:background="@drawable/me_item_drawable"
+                android:clickable="true" >
+
+                <include
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    layout="@layout/view_divider" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="16dp"
+                    android:text="@string/category_management"
                     android:textColor="@color/font_major_dark"
-				    android:textSize="16sp" />
-				
-				<ImageView
-				    android:layout_width="wrap_content"
-				    android:layout_height="wrap_content"
-				    android:layout_alignParentRight="true"
-				    android:layout_centerVertical="true"
-				    android:layout_marginRight="10dp"
-				    android:contentDescription="@string/next"
-				    android:src="@drawable/next" />
-				
-			</RelativeLayout>
+                    android:textSize="16sp" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="10dp"
+                    android:contentDescription="@string/next"
+                    android:src="@drawable/next" />
+
+                <include
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:layout_alignParentBottom="true"
+                    layout="@layout/view_divider" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/tagLayout"
+                android:layout_width="match_parent"
+                android:layout_height="50.5dp"
+                android:background="@drawable/me_item_drawable"
+                android:clickable="true" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="16dp"
+                    android:text="@string/tag_management"
+                    android:textColor="@color/font_major_dark"
+                    android:textSize="16sp" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="10dp"
+                    android:contentDescription="@string/next"
+                    android:src="@drawable/next" />
+
+                <include
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:layout_alignParentBottom="true"
+                    layout="@layout/view_divider" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/aboutLayout"
+                android:layout_width="match_parent"
+                android:layout_height="50.5dp"
+                android:layout_marginTop="24dp"
+                android:background="@drawable/me_item_drawable"
+                android:clickable="true" >
+
+                <include
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    layout="@layout/view_divider" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="16dp"
+                    android:text="@string/about_us"
+                    android:textColor="@color/font_major_dark"
+                    android:textSize="16sp" />
+            </RelativeLayout>
+
+            <include
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                layout="@layout/view_divider" />
+
+            <RelativeLayout
+                android:id="@+id/feedbackLayout"
+                android:layout_width="match_parent"
+                android:layout_height="50.5dp"
+                android:background="@drawable/me_item_drawable"
+                android:clickable="true" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="16dp"
+                    android:text="@string/feedback"
+                    android:textColor="@color/font_major_dark"
+                    android:textSize="16sp" />
+
+            </RelativeLayout>
 
             <!--
 	        <include                 
