--- a/app/src/main/res/layout/window_reim_type.xml
+++ b/app/src/main/res/layout/window_reim_type.xml
@@ -102,7 +102,7 @@
 	    android:gravity="center"
 	    android:background="@drawable/popup_drawable"
 	    android:text="@string/confirm"
-	    android:textColor="@color/button_text_dark" 
+	    android:textColor="@color/button_text_dark_color"
 	    android:textSize="18sp" />
 
 </LinearLayout>
