--- a/app/src/main/res/layout/activity_me_invite.xml
+++ b/app/src/main/res/layout/activity_me_invite.xml
@@ -27,13 +27,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/my_invites"
+            android:text="@string/detail"
             android:textColor="@color/major_light"
             android:textSize="20sp" />
     </RelativeLayout>
 
     <TextView
-        android:id="@+id/inviteTextView"
+        android:id="@+id/contentTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="34dp"
