--- a/app/src/main/res/layout/activity_me_profile.xml
+++ b/app/src/main/res/layout/activity_me_profile.xml
@@ -32,6 +32,18 @@
             android:textColor="@color/major_light"
             android:textSize="20sp" />
 
+        <TextView
+            android:id="@+id/signOutTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:gravity="center"
+            android:text="@string/sign_out"
+            android:textColor="@color/title_text_color"
+            android:textSize="16sp" />
+
     </RelativeLayout>
 
     <ScrollView
