improve detail of choose member

--- a/app/src/main/res/layout/activity_me_manager.xml
+++ b/app/src/main/res/layout/activity_me_manager.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:reim="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
@@ -78,7 +79,73 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="24dp"
-        android:background="@color/list_item_header" />
+        android:background="@color/list_item_header" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="16dp"
+            android:text="@string/my_manager"
+            android:textColor="@color/font_list_item_header"
+            android:textSize="14sp" />
+
+    </RelativeLayout>
+
+    <include
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        layout="@layout/view_divider"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="66dp"
+        android:background="@color/list_item_unselected" >
+
+        <classes.widget.CircleImageView
+            android:id="@+id/avatarImageView"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="16dp"
+            android:contentDescription="@string/avatar"
+            android:src="@drawable/default_avatar"
+            reim:border_width="0dp" />
+
+        <TextView
+            android:id="@+id/nicknameTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@+id/avatarImageView"
+            android:text="@string/manager_not_set"
+            android:textColor="@color/font_major_dark"
+            android:textSize="16sp" />
+
+    </RelativeLayout>
+
+    <include
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        layout="@layout/view_divider"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="24dp"
+        android:background="@color/list_item_header" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="16dp"
+            android:text="@string/all_members"
+            android:textColor="@color/font_list_item_header"
+            android:textSize="14sp" />
+
+    </RelativeLayout>
 
     <include
         android:layout_width="match_parent"
