--- a/app/src/main/res/layout/activity_image_single.xml
+++ b/app/src/main/res/layout/activity_image_single.xml
@@ -6,7 +6,7 @@
     android:gravity="center" >
 
     <classes.widget.subscaleview.SubsamplingScaleImageView
-        android:id="@+id/imageView"
+        android:id="@+id/avatarImageView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
