--- a/app/src/main/res/layout/grid_gallery.xml
+++ b/app/src/main/res/layout/grid_gallery.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content" >
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/avatarImageView"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_centerInParent="true"
