--- a/app/src/main/res/layout/list_category_stat.xml
+++ b/app/src/main/res/layout/list_category_stat.xml
@@ -10,13 +10,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
-	    <TextView
+        <ImageView
+            android:id="@+id/iconImageView"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:layout_marginLeft="16dp"
+            android:layout_gravity="center_vertical"
+            android:contentDescription="@string/icon"
+            android:src="@drawable/default_icon"/>
+
+        <TextView
 	        android:id="@+id/titleTextView"
 	        android:layout_width="0dp"
 	        android:layout_height="match_parent"
 	        android:layout_weight="3"
-	        android:layout_marginLeft="16dp"
-	        android:gravity="center_vertical"
+	        android:layout_marginLeft="8dp"
+            android:layout_marginBottom="4dp"
+            android:gravity="center_vertical"
 	        android:ellipsize="end"
 	        android:singleLine="true"
 	        android:textColor="@color/font_major_dark"
