--- a/app/src/main/res/layout/list_vendor.xml
+++ b/app/src/main/res/layout/list_vendor.xml
@@ -5,7 +5,7 @@
     android:background="@color/major_light" >
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/avatarImageView"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_centerVertical="true"
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toLeftOf="@+id/distanceTextView"
-        android:layout_toRightOf="@+id/imageView"
+        android:layout_toRightOf="@+id/avatarImageView"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:textColor="@color/font_major_dark"
@@ -29,7 +29,7 @@
         android:id="@+id/addressTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/imageView"
+        android:layout_toRightOf="@+id/avatarImageView"
         android:layout_below="@+id/nameTextView"
         android:layout_marginTop="3dp"
         android:layout_marginLeft="10dp"
