--- a/app/src/main/res/layout/activity_report_manager.xml
+++ b/app/src/main/res/layout/activity_report_manager.xml
@@ -45,14 +45,68 @@
     </RelativeLayout>
 
     <LinearLayout
+        android:id="@+id/inviteContainer"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <RelativeLayout
+            android:id="@+id/inviteLayout"
+            android:layout_width="match_parent"
+            android:layout_height="66.5dp"
+            android:orientation="vertical"
+            android:background="@drawable/list_item_drawable">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="16dp"
+                android:gravity="center_vertical"
+                android:text="@string/invite"
+                android:textColor="@color/font_major_dark"
+                android:textSize="16sp" />
+
+            <ImageView
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="16dp"
+                android:contentDescription="@string/next"
+                android:src="@drawable/next" />
+
+            <include
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_alignParentBottom="true"
+                layout="@layout/view_divider"/>
+
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/noMemberTextView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/no_member"
+            android:textColor="@color/hint_light_grey"
+            android:textSize="16sp"/>
+
+    </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/searchContainer"
+        android:layout_width="match_parent"
+        android:layout_height="48.5dp"
         android:orientation="horizontal" >
 
         <ImageView
+            android:id="@+id/searchImageView"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_gravity="center_vertical"
+            android:layout_centerVertical="true"
             android:layout_marginLeft="16dp"
             android:contentDescription="@string/search"
             android:src="@drawable/search" />
@@ -61,101 +115,119 @@
             android:id="@+id/managerEditText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_centerInParent="true"
+            android:layout_toRightOf="@+id/searchImageView"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:background="@null"
             android:hint="@string/input_manager"
             android:inputType="text" />
 
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_alignParentBottom="true"
+            layout="@layout/view_divider"/>
+
+    </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/managerContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="24dp"
+            android:background="@color/list_item_header" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="16dp"
+                android:text="@string/my_manager"
+                android:textColor="@color/font_list_item_header"
+                android:textSize="14sp" />
+
+        </RelativeLayout>
+
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            layout="@layout/view_divider"/>
+
+        <RelativeLayout
+            android:id="@+id/managerLayout"
+            android:layout_width="match_parent"
+            android:layout_height="66dp"
+            android:background="@color/list_item_unselected" >
+
+            <classes.widget.CircleImageView
+                android:id="@+id/avatarImageView"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="16dp"
+                android:contentDescription="@string/avatar"
+                android:src="@drawable/default_avatar"
+                reim:border_width="0dp" />
+
+            <TextView
+                android:id="@+id/nicknameTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:layout_toRightOf="@+id/avatarImageView"
+                android:text="@string/manager_not_set"
+                android:textColor="@color/font_major_dark"
+                android:textSize="16sp" />
+
+        </RelativeLayout>
+
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            layout="@layout/view_divider"/>
+
     </LinearLayout>
 
-    <include
+    <LinearLayout
+        android:id="@+id/colleagueContainer"
         android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        layout="@layout/view_divider"/>
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="24dp"
-        android:background="@color/list_item_header" >
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="24dp"
+            android:background="@color/list_item_header" >
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="16dp"
-            android:text="@string/my_manager"
-            android:textColor="@color/font_list_item_header"
-            android:textSize="14sp" />
+            <TextView
+                android:id="@+id/colleagueTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="16dp"
+                android:text="@string/my_colleagues"
+                android:textColor="@color/font_list_item_header"
+                android:textSize="14sp"/>
 
-    </RelativeLayout>
+        </RelativeLayout>
 
-    <include
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        layout="@layout/view_divider"/>
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            layout="@layout/view_divider"/>
 
-    <RelativeLayout
-        android:id="@+id/managerLayout"
-        android:layout_width="match_parent"
-        android:layout_height="66dp"
-        android:background="@color/list_item_unselected" >
+        <ListView
+            android:id="@+id/managerListView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:listSelector="@drawable/list_item_drawable" />
 
-        <classes.widget.CircleImageView
-            android:id="@+id/avatarImageView"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="16dp"
-            android:contentDescription="@string/avatar"
-            android:src="@drawable/default_avatar"
-            reim:border_width="0dp" />
-
-        <TextView
-            android:id="@+id/nicknameTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@+id/avatarImageView"
-            android:text="@string/manager_not_set"
-            android:textColor="@color/font_major_dark"
-            android:textSize="16sp" />
-
-    </RelativeLayout>
-
-    <include
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        layout="@layout/view_divider"/>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="24dp"
-        android:background="@color/list_item_header" >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="16dp"
-            android:text="@string/all_members"
-            android:textColor="@color/font_list_item_header"
-            android:textSize="14sp" />
-
-    </RelativeLayout>
-
-    <include
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        layout="@layout/view_divider"/>
-    
-    <ListView
-        android:id="@+id/managerListView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:listSelector="@drawable/list_item_drawable" />
+    </LinearLayout>
 
 </LinearLayout>
