--- a/app/src/main/res/layout/list_approve_info.xml
+++ b/app/src/main/res/layout/list_approve_info.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:reim="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="66dp"
+    android:layout_height="66.5dp"
     android:orientation="horizontal" >
 
     <RelativeLayout
@@ -33,94 +33,108 @@
             android:layout_below="@+id/pivotView"
             android:background="@color/background_grey" />
 
-	    <classes.widget.CircleImageView
-	        android:id="@+id/pointImageView"
-	        android:layout_width="10dp"
-	        android:layout_height="10dp"
-			android:layout_centerInParent="true"
-	        android:contentDescription="@string/approve_info"
-	        android:src="@drawable/point_approved"
-	        reim:border_width="0dp" />
+        <classes.widget.CircleImageView
+            android:id="@+id/pointImageView"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:layout_centerInParent="true"
+            android:contentDescription="@string/approve_info"
+            android:src="@drawable/point_approved"
+            reim:border_width="0dp" />
 
     </RelativeLayout>
 
-    <classes.widget.CircleImageView
-        android:id="@+id/avatarImageView"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-		android:layout_gravity="center_vertical"
-        android:layout_marginRight="16dp"
-        android:contentDescription="@string/avatar"
-        android:src="@drawable/default_avatar"
-        reim:border_width="0dp" />
-
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-
-        <TextView
-            android:id="@+id/nicknameTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_toLeftOf="@+id/timeLayout"
-            android:layout_marginTop="6dp"
-            android:ellipsize="end"
-            android:singleLine="true"
-            android:text="@string/not_available"
-            android:textColor="@color/font_major_dark"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/statusTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/nicknameTextView"
-            android:layout_marginTop="3dp"
-            android:textSize="20sp" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:id="@+id/timeLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="6dp" >
+            android:layout_width="match_parent"
+            android:layout_height="66dp"
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/timeTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="9dp"
-                android:layout_gravity="right"
-                android:textColor="@color/hint_grey"
-                android:textSize="16sp" />
+            <classes.widget.CircleImageView
+                android:id="@+id/avatarImageView"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="16dp"
+                android:contentDescription="@string/avatar"
+                android:src="@drawable/default_avatar"
+                reim:border_width="0dp" />
 
-            <TextView
-                android:id="@+id/dateTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="1dp"
-                android:textColor="@color/hint_grey"
-                android:textSize="16sp" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" >
+
+                <TextView
+                    android:id="@+id/nicknameTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_toLeftOf="@+id/timeLayout"
+                    android:layout_marginTop="6dp"
+                    android:ellipsize="end"
+                    android:singleLine="true"
+                    android:text="@string/not_available"
+                    android:textColor="@color/font_major_dark"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/statusTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/nicknameTextView"
+                    android:layout_marginTop="3dp"
+                    android:textSize="20sp" />
+
+                <LinearLayout
+                    android:id="@+id/timeLayout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="6dp" >
+
+                    <TextView
+                        android:id="@+id/timeTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="9dp"
+                        android:layout_gravity="right"
+                        android:textColor="@color/hint_grey"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/dateTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="1dp"
+                        android:textColor="@color/hint_grey"
+                        android:textSize="16sp" />
+                </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/alarmImageView"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:padding="5dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="6dp"
+                    android:contentDescription="@string/alarm"
+                    android:src="@drawable/alarm_enabled_drawable" />
+            </RelativeLayout>
+
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/alarmImageView"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:padding="5dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="6dp"
-            android:contentDescription="@string/alarm"
-            android:src="@drawable/alarm_enabled_drawable" />
-
         <include
+            android:id="@+id/divider"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
-            android:layout_alignParentBottom="true"
             layout="@layout/view_divider" />
-    </RelativeLayout>
+
+    </LinearLayout>
 
 </LinearLayout>
